--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.supabase.co https://va.vercel-scripts.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; img-src 'self' data: blob: https://*.supabase.co https://lnkmx.my; connect-src 'self' https://*.supabase.co https://ai.gateway.lovable.dev https://vitals.vercel-analytics.com; frame-src 'self';" />
     
     <!-- Primary SEO Meta Tags (client-side updates in SEOLandingHead) -->
     <title>lnkmx - The Micro-Business OS | Конструктор страниц + CRM + Аналитика</title>
