--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <style>
     /* Critical font fallback to prevent layout shift */
     body {
-      font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      font-family: Inter, Manrope, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       margin: 0;
     }
 
@@ -107,7 +107,7 @@
   </style>
 
   <!-- Load fonts with display=swap - non-blocking -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Manrope:wght@400;500;600;700;800&display=swap" />
 
   <!-- PWA Meta Tags -->
   <meta name="theme-color" content="#0080ff" />
